# Reconator

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  app.json  docker-compose.yml  heroku.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py  worker.py
backend/app/api/: deps.py
backend/app/api/routes/: health.py  modules.py  results.py  system.py  targets.py
backend/app/core/: auth.py  config.py  logging.py  metrics.py  middleware.py  sentry.py
backend/app/db/: base.py  models.py  session.py
backend/app/schemas/: target.py
backend/app/services/: modules.py  notifier.py  scanner.py
backend/tests/: conftest.py  test_targets.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  StatusBadge.tsx  ThemeProvider.tsx
frontend/src/components/ui/: badge.tsx  dialog.tsx  table.tsx  textarea.tsx  toast.tsx  toaster.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Dashboard.tsx  Modules.tsx  Settings.tsx  TargetDetail.tsx  Targets.tsx
